--- a/Exercice7/style.css
+++ b/Exercice7/style.css
@@ -51,3 +51,21 @@ section {
     margin-bottom: 20px;
 }
 
+@media only screen and (max-width : 768px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    nav {
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 0;
+    }
+
+}
